deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stor-dev-deployment
  namespace: tijmen
spec:
  selector:
    matchLabels:
      app: stor-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: stor-dev
    spec:
      containers:
      - name: stor-dev
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
