service.yml
apiVersion: v1
kind: Service
metadata:
  name: stor-dev-service
  namespace: tijmen
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: stor-dev
