ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stor-dev-ingress
  namespace: tijmen
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: tijmen-letsencrypt
spec:
  tls:
  - hosts:
    - stor.dev
    secretName: stor-dev-cert
  rules:
  - host: stor.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: stor-dev-service
          servicePort: 80
